--- a/gui_2/package.json
+++ b/gui_2/package.json
@@ -92,6 +92,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@mui-treasury/layout": "^5.0.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/lab": "5.0.0-alpha.159",
     "@mui/material": "^5.15.3",
@@ -137,10 +138,6 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
-    "@types/dockerode": "^3.3.23",
-    "@types/lodash": "^4.14.202",
-    "@types/sprintf-js": "^1.1.4",
-    "@types/uniqid": "^5.3.4",
     "@electron/notarize": "^2.1.0",
     "@electron/rebuild": "^3.3.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
@@ -148,11 +145,15 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/dockerode": "^3.3.23",
     "@types/jest": "^29.5.5",
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.1",
+    "@types/sprintf-js": "^1.1.4",
+    "@types/uniqid": "^5.3.4",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
