--- a/gui_2/package.json
+++ b/gui_2/package.json
@@ -88,6 +88,7 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^2.17.0",
+    "@electron/remote": "^2.1.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -101,9 +102,11 @@
     "axios": "^1.6.4",
     "byte-size": "^8.1.1",
     "check-internet-connected": "^2.0.6",
+    "clsx": "^2.1.0",
     "cp-file": "^9.1.0",
     "cpy": "^11.0.0",
     "dayjs": "^1.11.10",
+    "dockerode": "^4.0.2",
     "electron-debug": "^3.2.0",
     "electron-dl": "^3.5.1",
     "electron-log": "^4.4.8",
@@ -146,6 +149,7 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/dockerode": "^3.3.23",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "20.6.2",
