Update Docker manager and Dockerfile
- In the `Manager` class, changed the `pullImage` method's `outputCallback` parameter to return a promise.
- In the same method, modified the code to handle errors when calling `outputCallback`.
- In the Dockerfile, added `libgsl27` package as a dependency.

These changes improve error handling in the code and add a new dependency in the Docker container.

--- a/scripts/app/container/Dockerfile
+++ b/scripts/app/container/Dockerfile
@@ -59,7 +59,7 @@ RUN usermod -u ${BOOT2DOCKER_ID} www-data && \
                    ca-certificates-java r-cran-shiny r-cran-rmarkdown \
                    r-cran-kableextra r-cran-rcurl r-cran-stringr r-cran-xml2 \
                    r-cran-knitr r-cran-devtools r-cran-optparse r-bioc-iranges \
-                   r-cran-brew r-cran-vcfr r-cran-dt && \
+                   r-cran-brew r-cran-vcfr r-cran-dt libgsl27 && \
     echo "ServerName localhost" >> /etc/apache2/apache2.conf && \
     update-java-alternatives -s "java-1.17.0-openjdk-${ARCHITECTURE}" && \
     update-ca-certificates -f && \
