--- a/gui_2/package.json
+++ b/gui_2/package.json
@@ -210,7 +210,8 @@
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-merge": "^5.9.0",
+    "native-addon-loader": "^2.0.1"
   },
   "build": {
     "productName": "Oncoreport",
