Add Linux package targets and update README
- Added "deb" and "rpm" to Linux package targets.
- Improved clarity in README about using Node 22.
- Included instructions for using nvm to manage Node versions.

--- a/gui/package.json
+++ b/gui/package.json
@@ -266,7 +266,9 @@
     "linux": {
       "target": [
         "AppImage",
-        "tar.gz"
+        "tar.gz",
+        "deb",
+        "rpm"
       ],
       "category": "Science"
     },
