--- a/ws/package.json
+++ b/ws/package.json
@@ -7,20 +7,20 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@tailwindcss/ui": "^0.6.0",
-        "axios": "^0.19",
+        "axios": "^1.7.9",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss-import": "^12.0.1",
-        "resolve-url-loader": "^3.1.0",
+        "postcss-import": "^16.1.0",
+        "resolve-url-loader": "^5.0.0",
         "sass": "^1.29.0",
         "sass-loader": "^8.0.2",
         "tailwindcss": "^1.8.0",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^0.1.0"
     }
 }
